Fix some bugs with light theme of the timeline

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ import YouTubeLogo from "../images/youtube.svg";
 					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
 					>Present</time
 				>
-				<h3 class="lg:text-[32px] sm:text-[27px] font-bold text-gray-900 dark:text-white">
+				<h3 class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white">
 					ACFPi Website
 				</h3>
 				<p
@@ -84,7 +84,7 @@ import YouTubeLogo from "../images/youtube.svg";
 					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
 					>April 2024</time
 				>
-				<h3 class="lg:text-[32px] sm:text-[27px] font-bold text-gray-900 dark:text-white">
+				<h3 class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white">
 					HoopConnect Website
 				</h3>
 				<p
@@ -129,7 +129,7 @@ import YouTubeLogo from "../images/youtube.svg";
 					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
 					>February 2024</time
 				>
-				<h3 class="lg:text-[32px] sm:text-[27px] font-bold text-gray-900 dark:text-white">
+				<h3 class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white">
 					First personal portfolio
 				</h3>
 				<p
