--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<div class="sticky top-0 pt-1 h-[80px]" id="navbar">
+<div class="sticky top-0 pt-1 h-[80px] z-50" id="navbar">
     <ul
         class="flex items-center gap-[36px] text-[20px] justify-center mt-5"
     >
