--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,22 +4,37 @@ import Header from "../components/Header.astro";
 import WorkButton from "../components/WorkButton.astro";
 import Separator from "../components/Separator.astro";
 import Social from "../components/Socials.astro";
+import Proyect from "../components/Proyect.astro";
+
+//Images
 import InstagramLogo from "../images/instagram.svg";
 import GitHubLogo from "../images/github.svg";
 import YouTubeLogo from "../images/youtube.svg";
+import Html from "../images/brand-html5.svg";
+import Css from "../images/brand-css3.svg";
+import Js from "../images/brand-javascript.svg";
+
+//Mockups
+import Clickedu from "../images/clickedu-mockup.webp";
+import Batman from "../images/batman-mockup.webp";
 ---
 
 <Layout title="PauProg | Personal Portfolio of a Frontend Developer">
 	<main class="max-w-[910px] lg:w-[910px] sm:w-auto sm:px-10">
 		<Header />
-		<div id="home" class="flex items-center lg:justify-between sm:justify-evenly lg:mt-36 sm:mt-32">
+		<div
+			id="home"
+			class="flex items-center lg:justify-between sm:justify-evenly lg:mt-36 sm:mt-32"
+		>
 			<img
 				src="images/profile.webp"
 				alt="image"
 				class="w-60 h-60 rounded-full border-2 border-white"
 			/>
 			<div>
-				<h class="font-bold lg:text-6xl w-full mb-7 sm:text-5xl">Hi, I'm PauProg 👋</h>
+				<h class="font-bold lg:text-6xl w-full mb-7 sm:text-5xl"
+					>Hi, I'm PauProg 👋</h
+				>
 				<p class="text-3xl mb-7">16 years old</p>
 				<WorkButton />
 			</div>
@@ -63,7 +78,9 @@ import YouTubeLogo from "../images/youtube.svg";
 					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
 					>Present</time
 				>
-				<h3 class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white">
+				<h3
+					class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white"
+				>
 					ACFPi Website
 				</h3>
 				<p
@@ -84,7 +101,9 @@ import YouTubeLogo from "../images/youtube.svg";
 					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
 					>April 2024</time
 				>
-				<h3 class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white">
+				<h3
+					class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white"
+				>
 					HoopConnect Website
 				</h3>
 				<p
@@ -98,12 +117,14 @@ import YouTubeLogo from "../images/youtube.svg";
 				<a
 					href="https://github.com/PauProg/hoopconnect-website"
 					class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+					target="_blank"
 					>Learn more <svg
 						class="w-3 h-3 ms-2 rtl:rotate-180"
 						aria-hidden="true"
 						xmlns="http://www.w3.org/2000/svg"
 						fill="none"
 						viewBox="0 0 14 10"
+						target="_blank"
 					>
 						<path
 							stroke="currentColor"
@@ -116,6 +137,7 @@ import YouTubeLogo from "../images/youtube.svg";
 				<a
 					href="https://pauprog.github.io/hoopconnect-website"
 					class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+					target="_blank"
 				>
 					Live
 				</a>
@@ -129,7 +151,9 @@ import YouTubeLogo from "../images/youtube.svg";
 					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
 					>February 2024</time
 				>
-				<h3 class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white">
+				<h3
+					class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white"
+				>
 					First personal portfolio
 				</h3>
 				<p
@@ -142,6 +166,7 @@ import YouTubeLogo from "../images/youtube.svg";
 				<a
 					href="https://github.com/PauProg/personal-portfolio"
 					class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+					target="_blank"
 					>Learn more <svg
 						class="w-3 h-3 ms-2 rtl:rotate-180"
 						aria-hidden="true"
@@ -160,11 +185,38 @@ import YouTubeLogo from "../images/youtube.svg";
 				<a
 					href="https://pauprog.github.io/personal-portfolio"
 					class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+					target="_blank"
 				>
 					Live
 				</a>
 			</li>
 		</ol>
+		<h2 class="font-bold mb-10 mt-20 lg:text-4xl sm:text-3xl">
+			Other Projects <span class="font-normal text-base opacity-70"
+				>(All on my github)</span>
+		</h2>
+		<div class="flex flex-col gap-7 justify-center items-center">
+			<Proyect
+				anchor="https://pauprog.github.io/clickedu-clone/"
+				title="Clickedu Clone"
+				description="This is a clone of a school platform called Clickedu. I made it to practice my skills in HTML and CSS."
+				alt="Project image"
+				src={Clickedu}
+				iconOne={Html}
+				iconTwo={Css}
+				iconThree={Js}
+			/>
+			<Proyect
+				anchor="https://pauprog.github.io/batman-responsive/"
+				title="First responsive website"
+				description="This is the first ever responsive website I've made. It's a website about Batman, made with HTML, CSS and JavaScript."
+				alt="Imagen del proyecto"
+				src={Batman}
+				iconOne={Html}
+				iconTwo={Css}
+				iconThree={Js}
+			/>
+		</div>
 		<Separator />
 		<div id="contact">
 			<h2 class="lg:text-5xl sm:text-4xl font-bold mb-3">Socials</h2>
@@ -217,7 +269,8 @@ import YouTubeLogo from "../images/youtube.svg";
 						stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-copy"
 					>
-						<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"
+						></path>
 						<path
 							d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z"
 						></path>
@@ -254,7 +307,11 @@ import YouTubeLogo from "../images/youtube.svg";
 			</div>
 		</div>
 		<footer>
-			<p class="text-white/50 font-semibold text-xl justify-center align-center flex mb-7">Made by PauProg</p>
+			<p
+				class="text-white/50 font-semibold text-xl justify-center align-center flex mb-7"
+			>
+				Made by PauProg
+			</p>
 		</footer>
 	</main>
 </Layout>
