Changing the meta data for the SEO

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Clickedu from "../images/clickedu-mockup.webp";
 import Batman from "../images/batman-mockup.webp";
 ---
 
-<Layout title="PauProg | Personal Portfolio of a Frontend Developer">
+<Layout>
 	<main class="max-w-[910px] lg:w-[910px] sm:w-auto sm:px-10">
 		<Header />
 		<div
