--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,3 @@
----
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
----
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -14,14 +6,57 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/webp" href="/images/profile.webp" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<!-- Primary Meta Tags -->
+		<title>PauProg | Personal portfolio of a Frontend Developer.</title>
+		<meta
+			name="title"
+			content="PauProg | Personal portfolio of a Frontend Developer."
+		/>
+		<meta
+			name="description"
+			content="Hi! 👋 I'm PauProg, a 16 years old frontend developer. I'm currently learning astro, so I build this portfolio."
+		/>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.pauprog.tech" />
+		<meta
+			property="og:title"
+			content="PauProg | Personal portfolio of a Frontend Developer."
+		/>
+		<meta
+			property="og:description"
+			content="Hi! 👋 I'm PauProg, a 16 years old frontend developer. I'm currently learning astro, so I build this portfolio."
+		/>
+		<meta
+			property="og:image"
+			content="https://metatags.io/images/meta-tags.png"
+		/>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://www.pauprog.tech" />
+		<meta
+			property="twitter:title"
+			content="PauProg | Personal portfolio of a Frontend Developer."
+		/>
+		<meta
+			property="twitter:description"
+			content="Hi! 👋 I'm PauProg, a 16 years old frontend developer. I'm currently learning astro, so I build this portfolio."
+		/>
+		<meta
+			property="twitter:image"
+			content="https://metatags.io/images/meta-tags.png"
+		/>
+
+		<!-- Meta Tags Generated with https://metatags.io -->
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
 <style is:global>
-	@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+	@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 	:root {
 		--accent: 136, 58, 234;
@@ -34,14 +69,14 @@ const { title } = Astro.props;
 			white 60%
 		);
 	}
-	body{
+	body {
 		overflow-x: hidden;
 	}
 	html {
 		display: flex;
 		justify-content: center;
 		font-family: "Inter", sans-serif;
-		background: #2B2A3A;
+		background: #2b2a3a;
 		background-size: 224px;
 		scroll-behavior: smooth;
 		color-scheme: dark;
