Delete light theme

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,25 +66,25 @@ import Batman from "../images/batman-mockup.webp";
 
 		<h2 class="font-bold mb-6 lg:text-5xl sm:text-4xl">Projects</h2>
 		<ol
-			class="relative border-s border-gray-200 dark:border-gray-700"
+			class="relative border-s border-gray-700"
 			id="proyects"
 		>
 			<li class="mb-10 ms-4">
 				<div
-					class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+					class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
 				>
 				</div>
 				<time
-					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
+					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-white/30"
 					>Present</time
 				>
 				<h3
-					class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white"
+					class="lg:text-[32px] sm:text-[27px] font-bold text-white"
 				>
 					ACFPi Website
 				</h3>
 				<p
-					class="mb-4 lg:text-[20px] sm:text-[15px] font-normal text-gray-500 dark:text-white/70"
+					class="mb-4 lg:text-[20px] sm:text-[15px] font-normal text-white/70"
 				>
 					I'm working on a website for the ACFPi association, linked
 					to my highschool Jaume Viladoms. This project allows me to
@@ -94,20 +94,20 @@ import Batman from "../images/batman-mockup.webp";
 			</li>
 			<li class="mb-10 ms-4">
 				<div
-					class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+					class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
 				>
 				</div>
 				<time
-					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
+					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-white/30"
 					>April 2024</time
 				>
 				<h3
-					class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white"
+					class="lg:text-[32px] sm:text-[27px] font-bold text-white"
 				>
 					HoopConnect Website
 				</h3>
 				<p
-					class="lg:text-[20px] sm:text-[15px] font-normal text-gray-500 dark:text-white/70 mb-4"
+					class="lg:text-[20px] sm:text-[15px] font-normal text-white/70 mb-4"
 				>
 					I had to make a website for a school project, so I decided
 					to make a website for a fictional company called
@@ -116,7 +116,7 @@ import Batman from "../images/batman-mockup.webp";
 				</p>
 				<a
 					href="https://github.com/PauProg/hoopconnect-website"
-					class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+					class="inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
 					target="_blank"
 					>Learn more <svg
 						class="w-3 h-3 ms-2 rtl:rotate-180"
@@ -284,6 +284,7 @@ import Batman from "../images/batman-mockup.webp";
 				>
 					<a
 						href="mailto:paumedvazquez@gmail.com"
+						target="_blank"
 						class="flex gap-2 align-center justify-center"
 					>
 						Send an email
