--- a/src/components/WorkButton.astro
+++ b/src/components/WorkButton.astro
@@ -1,3 +1,3 @@
-<a href="mailto:paumedvazquez@gmail.com" class="bg-[#54BEB8] text-xl px-5 py-4 rounded-full hover:bg-[#3B8681] transition-all">
+<a href="mailto:paumedvazquez@gmail.com" target="_blank" class="bg-[#54BEB8] text-xl px-5 py-4 rounded-full hover:bg-[#3B8681] transition-all">
     Contact Me! ✉️
 </a>
