Fix every light theme

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -136,7 +136,7 @@ import Batman from "../images/batman-mockup.webp";
 				>
 				<a
 					href="https://pauprog.github.io/hoopconnect-website"
-					class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+					class="inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
 					target="_blank"
 				>
 					Live
@@ -144,20 +144,20 @@ import Batman from "../images/batman-mockup.webp";
 			</li>
 			<li class="ms-4">
 				<div
-					class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+					class="absolute w-3 h-3rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
 				>
 				</div>
 				<time
-					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 dark:text-white/30"
+					class="mb-1 lg:text-[20px] sm:text-[15px] font-normal leading-none text-gray-400 text-white/30"
 					>February 2024</time
 				>
 				<h3
-					class="lg:text-[32px] sm:text-[27px] font-bold dark:text-white"
+					class="lg:text-[32px] sm:text-[27px] font-bold text-white"
 				>
 					First personal portfolio
 				</h3>
 				<p
-					class="lg:text-[20px] sm:text-[15px] font-normal text-gray-500 dark:text-white/70 mb-4"
+					class="lg:text-[20px] sm:text-[15px] font-normal text-gray-500 text-white/70 mb-4"
 				>
 					This is the first personal portfolio I've ever made. Even
 					the fact that it was built with only HTML and CSS, I was
@@ -165,7 +165,7 @@ import Batman from "../images/batman-mockup.webp";
 				</p>
 				<a
 					href="https://github.com/PauProg/personal-portfolio"
-					class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+					class="inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
 					target="_blank"
 					>Learn more <svg
 						class="w-3 h-3 ms-2 rtl:rotate-180"
@@ -184,7 +184,7 @@ import Batman from "../images/batman-mockup.webp";
 				>
 				<a
 					href="https://pauprog.github.io/personal-portfolio"
-					class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+					class="inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
 					target="_blank"
 				>
 					Live
