--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Batman from "../images/batman-mockup.webp";
 		>
 			<img
 				src="images/profile.webp"
-				alt="image"
+				alt="PauProg profile picture"
 				class="w-60 h-60 rounded-full border-2 border-white"
 			/>
 			<div>
@@ -116,7 +116,7 @@ import Batman from "../images/batman-mockup.webp";
 				</p>
 				<a
 					href="https://github.com/PauProg/hoopconnect-website"
-					class="inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
+					class="transition-all duration-300 inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
 					target="_blank"
 					>Learn more <svg
 						class="w-3 h-3 ms-2 rtl:rotate-180"
@@ -136,7 +136,7 @@ import Batman from "../images/batman-mockup.webp";
 				>
 				<a
 					href="https://pauprog.github.io/hoopconnect-website"
-					class="inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
+					class="transition-all duration-300 inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
 					target="_blank"
 				>
 					Live
@@ -144,7 +144,7 @@ import Batman from "../images/batman-mockup.webp";
 			</li>
 			<li class="ms-4">
 				<div
-					class="absolute w-3 h-3rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
+					class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
 				>
 				</div>
 				<time
@@ -165,7 +165,7 @@ import Batman from "../images/batman-mockup.webp";
 				</p>
 				<a
 					href="https://github.com/PauProg/personal-portfolio"
-					class="inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
+					class="transition-all duration-300 inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
 					target="_blank"
 					>Learn more <svg
 						class="w-3 h-3 ms-2 rtl:rotate-180"
@@ -184,7 +184,7 @@ import Batman from "../images/batman-mockup.webp";
 				>
 				<a
 					href="https://pauprog.github.io/personal-portfolio"
-					class="inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
+					class="transition-all duration-300 inline-flex items-center px-4 py-2 text-sm font-medium border rounded-lg focus:z-10 focus:ring-4 focus:outline-none focus:text-blue-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700 focus:ring-gray-700"
 					target="_blank"
 				>
 					Live
