responsive changes on mobile phone

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,25 +12,25 @@
         </li>
         <li>
             <a
-                class="text-white hover:opacity-70 transition-opacity"
+                class="text-white hover:opacity-70 transition-all"
                 href="#home">Home</a
             >
         </li>
         <li>
             <a
-                class="text-white hover:opacity-70 transition-opacity"
+                class="text-white hover:opacity-70 transition-all"
                 href="#about">About Me</a
             >
         </li>
         <li>
             <a
-                class="text-white hover:opacity-70 transition-opacity"
+                class="text-white hover:opacity-70 transition-all"
                 href="#proyects">Proyects</a
             >
         </li>
         <li>
             <a
-                class="text-white hover:opacity-70 transition-opacity"
+                class="text-white hover:opacity-70 transition-all"
                 href="#contact">Contact</a
             >
         </li>
@@ -42,7 +42,7 @@
         const navbar = document.getElementById("navbar");
         const image = document.getElementById("image");
         const imageLi = document.getElementById("image-li");
-        if (window.scrollY > 450) {
+        if (window.scrollY > 425) {
             image.classList.remove("hidden");
             image.classList.add("block");
             navbar.classList.add("scrolled");
