Change my email

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -264,12 +264,12 @@ import Batman from "../images/batman-mockup.webp";
 			<div
 				class="bg-white/15 border-2 border-white/20 px-4 py-2 font-semibold lg:text-2xl sm:text-s rounded-lg cursor-pointer"
 			>
-				✉️ paumedvazquez@gmail.com
+				✉️ contact@pauprog.tech
 			</div>
 			<div class="flex gap-2 lg:flex-row sm:flex-col">
 				<div
 					class="flex justify-center items-center gap-2 bg-blue-600/40 px-5 py-2 rounded-lg font-semibold lg:text-xl sm:text-s border-blue-500/50 border-2 transition-all hover:bg-blue-600/60 cursor-pointer"
-					onclick="navigator.clipboard.writeText('paumedvazquez@gmail.com')"
+					onclick="navigator.clipboard.writeText('contact@pauprog.tech')"
 				>
 					<p>Copy</p>
 					<svg
@@ -297,7 +297,7 @@ import Batman from "../images/batman-mockup.webp";
 					class="flex justify-center items-center gap-2 bg-blue-600/40 px-5 py-2 rounded-lg font-semibold lg:text-xl sm:text-s border-blue-500/50 border-2 transition-all hover:bg-blue-600/60 cursor-pointer"
 				>
 					<a
-						href="mailto:paumedvazquez@gmail.com"
+						href="mailto:contact@pauprog.tech"
 						target="_blank"
 						class="flex gap-2 align-center justify-center"
 					>
