--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -10,6 +10,6 @@ const { src, alt, title, anchor, color } = Astro.props;
 ---
 
 <a href={anchor} class="flex content-center lg:text-[20px] sm:text-[17px] items-center gap-2 border-2 border-gray-700 hover:border-gray-500 hover:bg-gray-700 px-3 py-4 rounded-lg transition-all duration-[.5s]" style={`color: ${color}`}>
-    <img src={ src.src } alt={ alt } class="w-[24px] h-[24px]">
+    <img src={ src.src } alt={ alt } class="w-[24px] h-[24px] hidden sm:block">
     <h3>{ title }</h3>
 </a>
